--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <a href="technology.html" class="card custom-card">
-                    <img src="assets/images/container.jpg" class="card-img-top" alt="AWS Article 1">
+                <a href="technology/technology.html" class="card custom-card">
+                    <img src="technology/assets/images/container.jpg" class="card-img-top" alt="AWS Article 1">
                     <div class="card-body">
                         <h5 class="card-title">Technology</h5>
                         <p class="card-text">Here you will get the insights about how really common technology working under the hood</p>
