--- a/technology/technology.html
+++ b/technology/technology.html
@@ -12,11 +12,11 @@
     <div class="container mt-5">
         <div class="text-center mb-5">
             <h1 class="display-3">Technology</h1>
-            <p class="lead">Explore the topic which you are interested in.</p>
+            <p class="lead">Explore the unseen mechanics behind everyday technology</p>
         </div>
         <div class="row">
             <div class="col-md-4">
-                <a href="https://aws.amazon.com/article1" class="card-link">
+                <a href="https://www.linkedin.com/pulse/running-arbitrary-code-vishal-tyagi-pr4ic/?trackingId=Hr7AUsCbShmX1QgcxTPSVg%3D%3D" target = _blank class="card-link">
                     <div class="card custom-card">
                         <img src="assets/images/container.jpg" class="card-img-top" alt="Running Arbitrary Code">
                         <div class="card-body">
