updated self development

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="aws.html" class="card custom-card">
+                <a href="aws/aws.html" class="card custom-card">
                     <img src="assets/images/the art of mindfull communication.jpg" class="card-img-top" alt="AWS Article 2">
                     <div class="card-body">
                         <h5 class="card-title">AWS</h5>
@@ -35,10 +35,10 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="self-development.html" class="card custom-card">
+                <a href="self-development/self-development.html" class="card custom-card">
                     <img src="assets/images/personal biases.jpg" class="card-img-top" alt="AWS Article 3">
                     <div class="card-body">
-                        <h5 class="card-title">Personal</h5>
+                        <h5 class="card-title">Self Development</h5>
                         <p class="card-text">Here you will get my opinions articles on situations , succes , paradox , life , relationship , etc. (although, these are only based my thought so, you might don't find it relatiable)</p>
                     </div>
                 </a>
