completed self-development

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="technology/assets/images/container.jpg" class="card-img-top" alt="AWS Article 1">
                     <div class="card-body">
                         <h5 class="card-title">Technology</h5>
-                        <p class="card-text">Here you will get the insights about how really common technology working under the hood</p>
+                        <p class="card-text">Explore the unseen mechanics behind everyday technology and some fun with code</p>
                     </div>
                 </a>
             </div>
@@ -36,7 +36,7 @@
             </div>
             <div class="col-md-4">
                 <a href="self-development/self-development.html" class="card custom-card">
-                    <img src="assets/images/personal biases.jpg" class="card-img-top" alt="AWS Article 3">
+                    <img src="assets/images/self-development.jpg" class="card-img-top" alt="AWS Article 3">
                     <div class="card-body">
                         <h5 class="card-title">Self Development</h5>
                         <p class="card-text">Here you will get my opinions articles on situations , succes , paradox , life , relationship , etc. (although, these are only based my thought so, you might don't find it relatiable)</p>
