--- a/technology/technology.html
+++ b/technology/technology.html
@@ -12,7 +12,7 @@
     <div class="container mt-5">
         <div class="text-center mb-5">
             <h1 class="display-3">Technology</h1>
-            <p class="lead">Explore the unseen mechanics behind everyday technology</p>
+            <p class="lead">Explore the unseen mechanics behind everyday technology and some fun with code</p>
         </div>
         <div class="row">
             <div class="col-md-4">
@@ -22,6 +22,18 @@
                         <div class="card-body">
                             <h5 class="card-title">Running Arbitrary Code</h5>
                             <p class="card-text">Ever wondered what really goes on behind the scenes when you accidentally create an infinite loop on platforms like LeetCode, HackerRank, or CodeChef, etc?</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <!-- 2 -->
+            <div class="col-md-4">
+                <a href="https://www.linkedin.com/feed/update/urn:li:activity:7214354662232113152/" target = _blank class="card-link">
+                    <div class="card custom-card">
+                        <img src="assets/images/container.jpg" class="card-img-top" alt="Running Arbitrary Code">
+                        <div class="card-body">
+                            <h5 class="card-title">Exploring cmd with Curl</h5>
+                            <p class="card-text">Here's a fun twist! You can also try something cool with curl by running ASCII art animations from ascii.live/list. It's a refreshing</p>
                         </div>
                     </div>
                 </a>
