--- a/technology/technology.html
+++ b/technology/technology.html
@@ -30,7 +30,7 @@
             <div class="col-md-4">
                 <a href="https://www.linkedin.com/feed/update/urn:li:activity:7214354662232113152/" target = _blank class="card-link">
                     <div class="card custom-card">
-                        <img src="assets/images/container.jpg" class="card-img-top" alt="Running Arbitrary Code">
+                        <img src="assets/images/curl.jpg" class="card-img-top" alt="Running Arbitrary Code">
                         <div class="card-body">
                             <h5 class="card-title">Exploring cmd with Curl</h5>
                             <p class="card-text">Here's a fun twist! You can also try something cool with curl by running ASCII art animations from ascii.live/list. It's a refreshing</p>
