--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="col-md-4">
                 <a href="aws/aws.html" class="card custom-card">
-                    <img src="assets/images/the art of mindfull communication.jpg" class="card-img-top" alt="AWS Article 2">
+                    <img src="assets/images/amazon.jpg" class="card-img-top" alt="AWS Article 2">
                     <div class="card-body">
                         <h5 class="card-title">AWS</h5>
                         <p class="card-text">Here you will get the guide for using aws resources and few projects to build in learning aws.</p>
