--- a/cloud computing/cloud_computing.html
+++ b/cloud computing/cloud_computing.html
@@ -6,7 +6,7 @@
     <title>AWS Articles</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link href="aws-style.css" rel="stylesheet">
+    <link href="cloud_computing-style.css" rel="stylesheet">
 </head>
 <body>
     <div class="container mt-5">
