--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="col-md-4">
                 <a href="technology/technology.html" class="card custom-card">
-                    <img src="technology/assets/images/container.jpg" class="card-img-top" alt="AWS Article 1">
+                    <img src="assets/images/tech.jpg" class="card-img-top" alt="AWS Article 1">
                     <div class="card-body">
                         <h5 class="card-title">Technology</h5>
                         <p class="card-text">Explore the unseen mechanics behind everyday technology and some fun with code</p>
@@ -35,7 +35,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="aws/aws.html" class="card custom-card">
+                <a href="cloud computing/cloud_computing.html" class="card custom-card">
                     <img src="assets/images/amazon.jpg" class="card-img-top" alt="AWS Article 2">
                     <div class="card-body">
                         <h5 class="card-title">AWS</h5>
