--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div class="row">
             <div class="col-md-4">
                 <a href="self-development/self-development.html" class="card custom-card">
-                    <img src="assets/images/self-development.jpg" class="card-img-top" alt="AWS Article 3">
+                    <img src="assets/images/Unrevealling.png" class="card-img-top" alt="AWS Article 3">
                     <div class="card-body">
-                        <h5 class="card-title">Self Development</h5>
-                        <p class="card-text">Here you will get my opinions articles on situations , succes , paradox , life , relationship , etc. (although, these are only based my thought so, you might don't find it relatiable)</p>
+                        <h5 class="card-title">Unveiling The Self</h5>
+                        <!-- <p class="card-text"></p> -->
                     </div>
                 </a>
             </div>
