--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <a href="self-development/self-development.html" class="card custom-card">
+                <a href="self-development/unveiling.html" class="card custom-card">
                     <img src="assets/images/Unrevealling.png" class="card-img-top" alt="AWS Article 3">
                     <div class="card-body">
                         <h5 class="card-title">Unveiling The Self</h5>
@@ -38,8 +38,8 @@
                 <a href="cloud computing/cloud_computing.html" class="card custom-card">
                     <img src="assets/images/cloud computing.jpg" class="card-img-top" alt="AWS Article 2">
                     <div class="card-body">
-                        <h5 class="card-title">AWS</h5>
-                        <p class="card-text">Here you will get the guide for using aws resources and few projects to build in learning aws.</p>
+                        <h5 class="card-title">Cloud Computing</h5>
+                        <p class="card-text">Find guides on using cloud resources and projects to enhance your cloud learning journey.</p>
                     </div>
                 </a>
             </div>
