--- a/self-development/unveiling.html
+++ b/self-development/unveiling.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AWS Articles</title>
+    <title>Unveiling</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link href="self-development-style.css" rel="stylesheet">
+    <link href="unveiling-style.css" rel="stylesheet">
 </head>
 <body>
     <div class="container mt-5">
         <div class="text-center mb-5">
-            <h1 class="display-3">Technology</h1>
-            <p class="lead">Explore the topic which you are interested in.</p>
+            <h1 class="display-3">Unveiling The Self</h1>
+            <p class="lead">Explore topics that spark your interest.</p>
         </div>
         <div class="row">
             <!-- 1 -->
