--- a/technology/technology.html
+++ b/technology/technology.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AWS Articles</title>
+    <title>Technology</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="technology-style.css" rel="stylesheet">
@@ -12,7 +12,7 @@
     <div class="container mt-5">
         <div class="text-center mb-5">
             <h1 class="display-3">Technology</h1>
-            <p class="lead">Explore the unseen mechanics behind everyday technology and some fun with code</p>
+            <p class="lead">Explore topics that spark your interest.</p>
         </div>
         <div class="row">
             <div class="col-md-4">
