--- a/cloud computing/cloud_computing.html
+++ b/cloud computing/cloud_computing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AWS Articles</title>
+    <title>Cloud Computing</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="cloud_computing-style.css" rel="stylesheet">
@@ -11,17 +11,28 @@
 <body>
     <div class="container mt-5">
         <div class="text-center mb-5">
-            <h1 class="display-3">Technology</h1>
-            <p class="lead">Explore the topic which you are interested in.</p>
+            <h1 class="display-3">Cloud Computing</h1>
+            <p class="lead">Explore topics that spark your interest.</p>
         </div>
         <div class="row">
             <div class="col-md-4">
-                <a href="https://aws.amazon.com/article1" class="card-link">
+                <a href="aws_resources/aws_resources.html" class="card-link">
                     <div class="card custom-card">
-                        <img src="assets/images/container.jpg" class="card-img-top" alt="Running Arbitrary Code">
+                        <img src="assets/images/aws_resources.png" class="card-img-top" alt="Running Arbitrary Code">
                         <div class="card-body">
-                            <h5 class="card-title">Running Arbitrary Code</h5>
-                            <p class="card-text">Ever wondered what really goes on behind the scenes when you accidentally create an infinite loop on platforms like LeetCode, HackerRank, or CodeChef, etc?</p>
+                            <h5 class="card-title">Aws Resources</h5>
+                            <p class="card-text">Find guides to start and stop AWS resources like S3, SNS, Route 53, and more.</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="aws_resources/aws_resources.html" class="card-link">
+                    <div class="card custom-card">
+                        <img src="assets/images/aws_beginner_projects.png" class="card-img-top" alt="Running Arbitrary Code">
+                        <div class="card-body">
+                            <h5 class="card-title">Aws Beginner Project</h5>
+                            <p class="card-text">Find guides to create projects using AWS resources and enhance your resume.</p>
                         </div>
                     </div>
                 </a>
