--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="assets/images/Unrevealling.png" class="card-img-top" alt="AWS Article 3">
                     <div class="card-body">
                         <h5 class="card-title">Unveiling The Self</h5>
-                        <!-- <p class="card-text"></p> -->
+                        <p class="card-text">Enhance your knowledge by delving into these articles on various topics.</p>
                     </div>
                 </a>
             </div>
