--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col-md-4">
                 <a href="self-development/unveiling.html" class="card custom-card">
-                    <img src="assets/images/Unrevealling.png" class="card-img-top" alt="AWS Article 3">
+                    <img src="assets/images/unveiling the self.jpg" class="card-img-top" alt="AWS Article 3">
                     <div class="card-body">
                         <h5 class="card-title">Unveiling The Self</h5>
                         <p class="card-text">Enhance your knowledge by delving into these articles on various topics.</p>
