--- a/self-development/unveiling.html
+++ b/self-development/unveiling.html
@@ -17,7 +17,7 @@
         <div class="row">
             <!-- 1 -->
             <div class="col-md-4">
-                <a href="https://medium.com/@vt3630/overcoming-problems-in-relationships-friends-partners-02ee5ad8bf75" class="card-link">
+                <a href="https://medium.com/@vt3630/overcoming-problems-in-relationships-friends-partners-02ee5ad8bf75" target = _blank class="card-link">
                     <div class="card custom-card">
                         <img src="assets/images/heartbroke.png" class="card-img-top" alt="Running Arbitrary Code">
                         <div class="card-body">
@@ -29,7 +29,7 @@
             </div>
             <!-- 2 -->
             <div class="col-md-4">
-                <a href="https://medium.com/@vt3630/the-paradox-of-success-927c67efe60e" class="card-link">
+                <a href="https://medium.com/@vt3630/the-paradox-of-success-927c67efe60e" target = _blank class="card-link">
                     <div class="card custom-card">
                         <img src="assets/images/paradox.jpg" class="card-img-top" alt="Running Arbitrary Code">
                         <div class="card-body">
@@ -41,7 +41,7 @@
             </div>
             <!-- 3 -->
             <div class="col-md-4">
-                <a href="https://medium.com/@vt3630/understanding-how-personal-bias-shapes-our-reading-experience-1c7fa4280410" class="card-link">
+                <a href="https://medium.com/@vt3630/understanding-how-personal-bias-shapes-our-reading-experience-1c7fa4280410" target = _blank class="card-link">
                     <div class="card custom-card">
                         <img src="assets/images/personal biases.jpg" class="card-img-top" alt="Running Arbitrary Code">
                         <div class="card-body">
@@ -53,7 +53,7 @@
             </div>
             <!-- 4 -->
             <div class="col-md-4">
-                <a href="https://medium.com/@vt3630/the-art-of-mindful-communication-1304577f3f5b" class="card-link">
+                <a href="https://medium.com/@vt3630/the-art-of-mindful-communication-1304577f3f5b"  target = _blank class="card-link">
                     <div class="card custom-card">
                         <img src="assets/images/the art of mindfull communication.jpg" class="card-img-top" alt="Running Arbitrary Code">
                         <div class="card-body">
@@ -66,7 +66,7 @@
             </div>
             <!-- 5 -->
             <div class="col-md-4">
-                <a href="https://medium.com/@vt3630/embracing-vulnerability-88f3e654ab55" class="card-link">
+                <a href="https://medium.com/@vt3630/embracing-vulnerability-88f3e654ab55" target = _blank class="card-link">
                     <div class="card custom-card">
                         <img src="assets/images/embracing vonurabilities.jpg" class="card-img-top" alt="Running Arbitrary Code">
                         <div class="card-body">
@@ -78,7 +78,7 @@
             </div>
             <!-- 6 -->
             <div class="col-md-4">
-                <a href="https://medium.com/@vt3630/unlocking-the-power-of-iq-and-ei-202eb0844f60" class="card-link">
+                <a href="https://medium.com/@vt3630/unlocking-the-power-of-iq-and-ei-202eb0844f60" target = _blank class="card-link">
                     <div class="card custom-card">
                         <img src="assets/images/iq and ei.jpg" class="card-img-top" alt="Running Arbitrary Code">
                         <div class="card-body">
@@ -90,7 +90,7 @@
             </div>
             <!-- 7 -->
             <div class="col-md-4">
-                <a href="https://medium.com/@vt3630/the-art-of-resilience-740e71a0408a" class="card-link">
+                <a href="https://medium.com/@vt3630/the-art-of-resilience-740e71a0408a"target = _blank  class="card-link">
                     <div class="card custom-card">
                         <img src="assets/images/the art of resilience.jpg" class="card-img-top" alt="Running Arbitrary Code">
                         <div class="card-body">
@@ -102,7 +102,7 @@
             </div>
             <!-- 8 -->
             <div class="col-md-4">
-                <a href="https://medium.com/@vt3630/rising-above-mistakes-a4c22851003b" class="card-link">
+                <a href="https://medium.com/@vt3630/rising-above-mistakes-a4c22851003b" target = _blank class="card-link">
                     <div class="card custom-card">
                         <img src="assets/images/rising above mistakes.jpg" class="card-img-top" alt="Running Arbitrary Code">
                         <div class="card-body">
@@ -114,7 +114,7 @@
             </div>
             <!-- 9 -->
             <div class="col-md-4">
-                <a href="https://medium.com/@vt3630/unlocking-your-potential-how-to-live-your-best-life-every-day-54b5766c993c" class="card-link">
+                <a href="https://medium.com/@vt3630/unlocking-your-potential-how-to-live-your-best-life-every-day-54b5766c993c" target = _blank class="card-link">
                     <div class="card custom-card">
                         <img src="assets/images/in.png" class="card-img-top" alt="Running Arbitrary Code">
                         <div class="card-body">
