--- a/cloud computing/aws_resources/aws_resources.html
+++ b/cloud computing/aws_resources/aws_resources.html
@@ -156,7 +156,7 @@
                         <div class="card-body">
                             <h5 class="card-title">
                                 How to host your static website with AWS S3.</h5>
-                            <p class="card-text">In this beginner AWS project, you'll create a serverless solution using Lambda to automatically start and stop your EC2 instances based on a schedule. By tagging instances with a key ("auto"), you'll manage them effortlessly....</p>
+                            <!-- <p class="card-text">In this beginner AWS project, you'll create a serverless solution using Lambda to automatically start and stop your EC2 instances based on a schedule. By tagging instances with a key ("auto"), you'll manage them effortlessly....</p> -->
                         </div>
                     </div>
                 </a>
