--- a/cloud computing/aws_beginner/aws_beginner.html
+++ b/cloud computing/aws_beginner/aws_beginner.html
@@ -13,7 +13,7 @@
     <div class="container mt-5">
         <div class="text-center mb-5">
             <h1 class="display-3">AWS Beginner Project</h1>
-            <p class="lead">Explore the project which you are interested in.</p>
+            <p class="lead">Explore topics that spark your interest.</p>
         </div>
         <div class="row">
             <!-- 1 -->
