--- a/cloud computing/aws_resources/aws_resources.html
+++ b/cloud computing/aws_resources/aws_resources.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AWS Beginner project</title>
+    <title>AWS Resources</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="aws_resources-style.css" rel="stylesheet">
@@ -12,8 +12,8 @@
 <body>
     <div class="container mt-5">
         <div class="text-center mb-5">
-            <h1 class="display-3">AWS Beginner Project</h1>
-            <p class="lead">Explore the project which you are interested in.</p>
+            <h1 class="display-3">Aws Resources</h1>
+            <p class="lead">Explore topics that spark your interest.</p>
         </div>
         <div class="row">
 
