--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container mt-5">
         <div class="text-center mb-5">
-            <h1 class="display-3">Articles</h1>
+            <h1 class="display-3">Insights</h1>
             <p class="lead">Explore the latest articles and updates</p>
         </div>
         <div class="row">
