--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <a href="self-development/unveiling.html" target = _blank class="card custom-card">
+                <a href="self-development/unveiling.html" class="card custom-card">
                     <img src="assets/images/unveiling the self.jpg" class="card-img-top" alt="AWS Article 3">
                     <div class="card-body">
                         <h5 class="card-title">Unveiling The Self</h5>
@@ -27,7 +27,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="technology/technology.html"target = _blank class="card custom-card">
+                <a href="technology/technology.html" class="card custom-card">
                     <img src="assets/images/tech.jpg" class="card-img-top" alt="AWS Article 1">
                     <div class="card-body">
                         <h5 class="card-title">Technology</h5>
@@ -36,7 +36,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="cloud computing/cloud_computing.html" target = _blank class="card custom-card">
+                <a href="cloud computing/cloud_computing.html" class="card custom-card">
                     <img src="assets/images/cloud computing.jpg" class="card-img-top" alt="AWS Article 2">
                     <div class="card-body">
                         <h5 class="card-title">Cloud Computing</h5>
