--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link href="style.css" rel="stylesheet">
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <div class="container mt-5">
         <div class="text-center mb-5">
@@ -22,7 +24,8 @@
                     <img src="assets/images/unveiling the self.jpg" class="card-img-top" alt="AWS Article 3">
                     <div class="card-body">
                         <h5 class="card-title">Unveiling The Self</h5>
-                        <p class="card-text">Enhance your knowledge by delving into these articles on various topics.</p>
+                        <p class="card-text">Enhance your knowledge by delving into these articles on various topics.
+                        </p>
                     </div>
                 </a>
             </div>
@@ -31,7 +34,8 @@
                     <img src="assets/images/tech.jpg" class="card-img-top" alt="AWS Article 1">
                     <div class="card-body">
                         <h5 class="card-title">Technology</h5>
-                        <p class="card-text">Explore the unseen mechanics behind everyday technology and some fun with code</p>
+                        <p class="card-text">Explore the unseen mechanics behind everyday technology and some fun with
+                            code</p>
                     </div>
                 </a>
             </div>
@@ -40,23 +44,21 @@
                     <img src="assets/images/cloud computing.jpg" class="card-img-top" alt="AWS Article 2">
                     <div class="card-body">
                         <h5 class="card-title">Cloud Computing</h5>
-                        <p class="card-text">Find guides on using cloud resources and projects to enhance your cloud learning journey.</p>
+                        <p class="card-text">Find guides on using cloud resources and projects to enhance your cloud
+                            learning journey.</p>
                     </div>
                 </a>
             </div>
         </div>
     </div>
-    
-   <!-- Footer -->
+
+    <!-- Footer -->
     <footer class="footer mt-5">
-        <div class="container text-center">
-            <a href="https://www.linkedin.com/yourprofile" target="_blank" class="social-icon">
-                <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="https://www.instagram.com/yourprofile" target="_blank" class="social-icon">
-                <i class="fab fa-instagram"></i>
-            </a>
-        </div>
+            <!-- LinkedIn badge -->
+            <div target = "_blank" class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL"
+                data-vanity="vishal0210" data-version="v1"><a class="badge-base__link LI-simple-link"
+                    href="https://in.linkedin.com/in/vishal0210?trk=profile-badge">Vishal Tyagi</a>
+            </div>
     </footer>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -64,4 +66,5 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
