--- a/index.html
+++ b/index.html
@@ -58,21 +58,11 @@
     </main>
 <footer class="footer mt-5">
     <div class="container">
-        <div class="row align-items-center justify-content-center">
-            <div class="col-md-6 text-center mb-3 mb-md-0">
-                <a href="https://linkedin.com/in/vishal0210" class="social-icon mr-3" target="_blank"
-                    rel="noopener noreferrer">
-                    <i class="fab fa-linkedin fa-2x" aria-hidden="true"></i>
-                    <span class="sr-only">LinkedIn</span>
+        <div class="row justify-content-center">
+            <div class="col-md-6 text-center">
+                <a href="https://linkedin.com/in/vishal0210" target="_blank" rel="noopener noreferrer">
+                    Vishal Tyagi
                 </a>
-                <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light"
-                    data-type="VERTICAL" data-vanity="vishal0210" data-version="v1">
-                    <a class="badge-base__link LI-simple-link"
-                        href="https://in.linkedin.com/in/vishal0210?trk=profile-badge" target="_blank"
-                        rel="noopener noreferrer">
-                        Vishal Tyagi - Top Cloud Computing Voice
-                    </a>
-                </div>
             </div>
         </div>
     </div>
@@ -82,7 +72,6 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="script.js"></script>
-<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </body>
 
 </html>
