--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="col-lg-4 col-md-6 mb-4">
                 <article class="card h-100">
-                    <img src="assets/images/unveiling-the-self.jpg" class="card-img-top" alt="Unveiling The Self">
+                    <img src="assets/images/unveiling the self.jpg" class="card-img-top" alt="Unveiling The Self">
                     <div class="card-body d-flex flex-column">
                         <h2 class="card-title h5">Unveiling The Self</h2>
                         <p class="card-text">Enhance your knowledge by delving into these articles on various self-development topics.</p>
@@ -46,7 +46,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-4">
                 <article class="card h-100">
-                    <img src="assets/images/cloud-computing.jpg" class="card-img-top" alt="Cloud Computing">
+                    <img src="assets/images/cloud computing.jpg" class="card-img-top" alt="Cloud Computing">
                     <div class="card-body d-flex flex-column">
                         <h2 class="card-title h5">Cloud Computing</h2>
                         <p class="card-text">Find guides on using cloud resources and projects to enhance your cloud learning journey.</p>
