--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="card-body d-flex flex-column">
                         <h2 class="card-title h5">Cloud Computing</h2>
                         <p class="card-text">Find guides on using cloud resources and projects to enhance your cloud learning journey.</p>
-                        <a href="cloud-computing/cloud-computing.html" class="btn btn-primary mt-auto">Learn More</a>
+                        <a href="cloud computing/cloud_computing.html" class="btn btn-primary mt-auto">Learn More</a>
                     </div>
                 </article>
             </div>
