--- a/index.html
+++ b/index.html
@@ -10,6 +10,33 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="style.css" rel="stylesheet">
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <style>
+        .card-link {
+            color: inherit;
+            text-decoration: none;
+        }
+
+        .card-link:hover {
+            text-decoration: none;
+        }
+
+        .card {
+            transition: transform 0.2s;
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+        }
+
+        .card-body {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .btn-wrapper {
+            margin-top: auto;
+        }
+    </style>
 </head>
 
 <body>
@@ -24,54 +51,85 @@
 
     <main class="container mt-5">
         <div class="row">
-            <div class="col-lg-4 col-md-6 mb-4">
-                <article class="card h-100">
-                    <img src="assets/images/unveiling.jpg" class="card-img-top" alt="Unveiling The Self">
-                    <div class="card-body d-flex flex-column">
-                        <h2 class="card-title h5">Unveiling The Self</h2>
-                        <p class="card-text">Enhance your knowledge by delving into these articles on various self-development topics.</p>
-                        <a href="self-development/unveiling.html" class="btn btn-primary mt-auto">Read More</a>
-                    </div>
-                </article>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <a href="self-development/unveiling.html" class="card-link">
+                    <article class="card h-100">
+                        <img src="assets/images/unveiling.jpg" class="card-img-top" alt="Unveiling The Self">
+                        <div class="card-body">
+                            <h2 class="card-title h5">Unveiling The Self</h2>
+                            <p class="card-text">Enhance your knowledge by delving into these articles on various
+                                self-development topics.</p>
+                            <div class="btn-wrapper">
+                                <a href="self-development/unveiling.html" class="btn btn-primary">Read More</a>
+                            </div>
+                        </div>
+                    </article>
+                </a>
             </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-                <article class="card h-100">
-                    <img src="assets/images/tech.jpg" class="card-img-top" alt="Technology">
-                    <div class="card-body d-flex flex-column">
-                        <h2 class="card-title h5">Technology</h2>
-                        <p class="card-text">Explore the unseen mechanics behind everyday technology and some fun with code.</p>
-                        <a href="technology/technology.html" class="btn btn-primary mt-auto">Discover More</a>
-                    </div>
-                </article>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <a href="technology/technology.html" class="card-link">
+                    <article class="card h-100">
+                        <img src="assets/images/tech.jpg" class="card-img-top" alt="Technology">
+                        <div class="card-body">
+                            <h2 class="card-title h5">Technology</h2>
+                            <p class="card-text">Explore the unseen mechanics behind everyday technology and some fun
+                                with code.</p>
+                            <div class="btn-wrapper">
+                                <a href="technology/technology.html" class="btn btn-primary">Discover More</a>
+                            </div>
+                        </div>
+                    </article>
+                </a>
             </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-                <article class="card h-100">
-                    <img src="assets/images/cloudComputing.jpg" class="card-img-top" alt="Cloud Computing">
-                    <div class="card-body d-flex flex-column">
-                        <h2 class="card-title h5">Cloud Computing</h2>
-                        <p class="card-text">Find guides on using cloud resources and projects to enhance your cloud learning journey.</p>
-                        <a href="cloud computing/cloud_computing.html" class="btn btn-primary mt-auto">Learn More</a>
-                    </div>
-                </article>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <a href="cloud computing/cloud_computing.html" class="card-link">
+                    <article class="card h-100">
+                        <img src="assets/images/cloudComputing.jpg" class="card-img-top" alt="Cloud Computing">
+                        <div class="card-body">
+                            <h2 class="card-title h5">Cloud Computing</h2>
+                            <p class="card-text">Find guides on using cloud resources and projects to enhance your cloud
+                                learning journey.</p>
+                            <div class="btn-wrapper">
+                                <a href="cloud computing/cloud_computing.html" class="btn btn-primary">Learn More</a>
+                            </div>
+                        </div>
+                    </article>
+                </a>
             </div>
-        </div>
-    </main>
-<footer class="footer mt-5">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-6 text-center">
-                <a href="https://linkedin.com/in/vishal0210" target="_blank" rel="noopener noreferrer">
-                    Vishal Tyagi
+            <div class="col-lg-3 col-md-6 mb-4">
+                <a href="linux/linux_blogs.html" class="card-link">
+                    <article class="card h-100">
+                        <img src="/assets/images/linux.jpg" alt="Linux" class="card-img-top">
+                        <div class="card-body">
+                            <h2 class="card-title h5">Linux</h2>
+                            <p class="card-text">Dive into the world of Linux with tutorials, tips, and in-depth
+                                articles.</p>
+                            <div class="btn-wrapper">
+                                <a href="linux/linux_blogs.html" class="btn btn-primary">Explore Linux</a>
+                            </div>
+                        </div>
+                    </article>
                 </a>
             </div>
         </div>
-    </div>
-</footer>
+    </main>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="script.js"></script>
+    <footer class="footer mt-5">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-6 text-center">
+                    <a href="https://linkedin.com/in/vishal0210" target="_blank" rel="noopener noreferrer">
+                        Vishal Tyagi
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
